[tool.poetry]
name = "hello-world-plotly"
version = "0.1.0"
description = ""
authors = ["Mykhailo Kan <mykhailo.kan@giss.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.22.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
